[package]
name = "screen_grabbing_utility"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.3.0"
chrono = "0.4.31"
crossbeam-channel = "0.5.8"
display-info = "0.4.3"
eframe = "0.23.0"
egui = "0.23.0"
egui-notify = "0.10.0"
egui_extras = "0.23.0"
egui_hotkey = "0.2.0"

global-hotkey = "0.4.0"

hotkey = "0.3.1"
image = "0.24.7"
imageproc = "0.23.0"
keyboard-types = "0.7.0"

mouse_position = "0.1.3"
rfd = "0.12.1"
rusttype = "0.9.3"
screenshots = "0.8.4"
